# WebRTC_NS_CPP

./: CMakeLists.txt  README.md  dr_wav.h  main.cc
ns/: aligned_malloc.cc  aligned_malloc.h  array_view.h  audio_buffer.cc  audio_buffer.h  audio_util.cc  audio_util.h  channel_buffer.h  checks.h  fast_math.cc  fast_math.h  fft4g.cc  fft4g.h  histograms.cc  histograms.h  noise_estimator.cc  noise_estimator.h  noise_suppressor.cc  noise_suppressor.h  ns_common.h  ns_config.h  ns_fft.cc  ns_fft.h  prior_signal_model.cc  prior_signal_model.h  prior_signal_model_estimator.cc  prior_signal_model_estimator.h  push_sinc_resampler.cc  push_sinc_resampler.h  quantile_noise_estimator.cc  quantile_noise_estimator.h  signal_model.cc  signal_model.h  signal_model_estimator.cc  signal_model_estimator.h  sinc_resampler.cc  sinc_resampler.h  speech_probability_estimator.cc  speech_probability_estimator.h  splitting_filter.c  (+9 more)
